# dynograph-foundation

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dynograph.example.toml
.github/workflows/: ci.yml
crates/dynograph-client/: Cargo.toml
crates/dynograph-client/src/: error.rs  lib.rs  wire.rs
crates/dynograph-client/tests/: integration.rs
crates/dynograph-core/: Cargo.toml
crates/dynograph-core/src/: error.rs  lib.rs  schema.rs  value.rs
crates/dynograph-introspection/: Cargo.toml
crates/dynograph-introspection/src/: lib.rs
crates/dynograph-resolution/: Cargo.toml
crates/dynograph-resolution/src/: fuzzy.rs  lib.rs  resolver.rs
crates/dynograph-service/: Cargo.toml
crates/dynograph-service/src/: app.rs  auth.rs  config.rs  edge_response.rs  embedding_response.rs  lib.rs  metadata_response.rs  metrics_state.rs  node_response.rs  readiness.rs  registry.rs  schema_evolution.rs  schema_response.rs  similar_response.rs
crates/dynograph-service/tests/: integration.rs  persistence.rs
crates/dynograph-storage/: Cargo.toml
crates/dynograph-storage/src/: cache.rs  engine.rs  keys.rs  lib.rs
crates/dynograph-vector/: Cargo.toml
crates/dynograph-vector/src/: distance.rs  hnsw.rs  lib.rs  stats.rs
docs/: api.md  migration.md  service.md
