# dynograph-foundation — shared, domain-agnostic foundation crates for
# graph-based projects.
#
# Crates here are intentionally domain-neutral. Domain-specific
# extractors, schemas, and servers live in consumer projects and
# depend on these crates as path / git / version dependencies.

[workspace]
resolver = "2"
members = [
    "crates/dynograph-core",
    "crates/dynograph-storage",
    "crates/dynograph-resolution",
    "crates/dynograph-vector",
    "crates/dynograph-service",
    "crates/dynograph-client",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
# `is_multiple_of` (used in dynograph-storage::engine::decode_embedding)
# stabilized in 1.94. Bumping in lockstep with the slice-11 Dockerfile
# pin so local `cargo build` fails loudly on older toolchains rather
# than via a missing-method error.
rust-version = "1.94"
license = "MIT"
authors = ["Anthony Sligar <sligara7@gmail.com>"]
repository = "https://github.com/sligara7/dynograph-foundation"

[profile.release]
# Strip debuginfo (not symbols) — keeps function names in backtraces
# but drops ~20-30 MB from the final binary. Slice 11's Docker image
# was 99.8 MB; with strip it should land around the canonical ~80 MB
# target. Affects local release builds too — debug builds keep full
# symbols, so `RUST_BACKTRACE=1` on a debug build still gives line
# numbers when needed.
strip = "debuginfo"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rmp-serde = "1"

# Storage
rocksdb = "0.24"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"

# HTTP service (dynograph-service)
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tower = "0.5"
sha2 = "0.11"
http-body-util = "0.1"
toml = "0.8"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
