[package]
name = "dynograph-service"
version.workspace = true
edition.workspace = true

[dependencies]
dynograph-core = { path = "../dynograph-core" }
dynograph-storage = { path = "../dynograph-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
tempfile = "3"
