[package]
name = "dynograph-service"
version.workspace = true
edition.workspace = true

[dependencies]
dynograph-core = { path = "../dynograph-core" }
dynograph-storage = { path = "../dynograph-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
thiserror = { workspace = true }
toml = { workspace = true }

[[bin]]
name = "dynograph"
path = "src/bin/dynograph.rs"

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
tempfile = "3"
