[package]
name = "dynograph-storage"
version.workspace = true
edition.workspace = true

[dependencies]
dynograph-core = { path = "../dynograph-core" }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
rocksdb = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
