[package]
name = "dynograph-storage"
version.workspace = true
edition.workspace = true

[dependencies]
dynograph-core = { path = "../dynograph-core" }
serde = { workspace = true }
rmp-serde = { workspace = true }
rocksdb = { workspace = true }
lru = "0.18"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
